--- a/app/src/main/res/layout/row_item_song.xml
+++ b/app/src/main/res/layout/row_item_song.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/font_uvn_baisau"
         android:text="Song Tittle"
+        android:maxLength="50"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="italic|bold" />
