--- a/app/src/main/res/layout/activity_passenger_manager.xml
+++ b/app/src/main/res/layout/activity_passenger_manager.xml
@@ -50,4 +50,13 @@
         android:layout_below="@+id/toolbar"
         android:padding="10dp" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddChild"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/ic_add_white_24dp" />
+
 </RelativeLayout>
